samples/_failures_safe/1761301223_933927_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a3b41b9.c: In function ‘main’:
./samples/SAFE/__tmp_9a3b41b9.c:151:29: error: missing terminating ' character
  151 |         'H', 'e', 'l', 'l', '
      |                             ^
./samples/SAFE/__tmp_9a3b41b9.c:151:9: error: expected expression at end of input
  151 |         'H', 'e', 'l', 'l', '
      |         ^~~
./samples/SAFE/__tmp_9a3b41b9.c:151:9: error: expected declaration or statement at end of input
